--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -28,6 +28,10 @@
                         <label for="month" class="block text-sm font-medium text-gray-700 mb-1">Month</label>
                         <select id="month" name="month" class="border p-2 rounded w-32" data-help="Select month"></select>
                     </div>
+                    <div class="flex items-center space-x-2 mb-1">
+                        <input type="checkbox" id="untagged-only" class="h-4 w-4" checked data-help="Show only untagged transactions">
+                        <label for="untagged-only" class="text-sm text-gray-700">Only untagged</label>
+                    </div>
                     <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">View</button>
                 </form>
             </div>
@@ -99,11 +103,13 @@ fetch('../php_backend/public/transaction_months.php')
     });
 
 const form = document.getElementById('statement-form');
-form.addEventListener('submit', function(e) {
-    e.preventDefault();
+const untaggedOnly = document.getElementById('untagged-only');
+
+function loadTransactions() {
     const month = monthSelect.value;
     const year = yearSelect.value;
-    fetch('../php_backend/public/transactions.php?month=' + month + '&year=' + year)
+    const untaggedParam = untaggedOnly.checked ? '&untagged=1' : '';
+    fetch('../php_backend/public/transactions.php?month=' + month + '&year=' + year + untaggedParam)
         .then(r => r.json())
         .then(data => {
             let income = 0, outgoings = 0;
@@ -168,7 +174,14 @@ form.addEventListener('submit', function(e) {
                 ]
             });
         });
+}
+
+form.addEventListener('submit', function(e) {
+    e.preventDefault();
+    loadTransactions();
 });
+
+untaggedOnly.addEventListener('change', loadTransactions);
 </script>
     <script src="js/overlay.js"></script>
 </body>
