--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <title>Finance Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="logo.svg">
     <style>
         body { font-family: 'Inter', sans-serif; }
     </style>
