Refine menu layout and font

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,10 +9,10 @@
     <meta http-equiv="Expires" content="0">
     <title>Finance Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="logo.svg">
     <style>
-        body { font-family: 'Inter', sans-serif; }
+        body { font-family: 'Roboto', sans-serif; font-weight: 300; }
     </style>
 </head>
 <body class="bg-gradient-to-br from-indigo-50 via-white to-blue-50">
